Fixed several errors in tests or errors pointed out by tests. WIP: Did some more work on the Plan entity and two new DTOs.